{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 260,
  "lineage": "3987355e-088a-0892-2f58-210a5530d9c7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "bastion_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bc79887afaf2fb3d",
            "arn": "arn:aws:ec2:eu-central-1:299138067566:elastic-ip/eipalloc-0bc79887afaf2fb3d",
            "association_id": "eipassoc-0d03ab5fa6c263bb9",
            "domain": "vpc",
            "id": "eipalloc-0bc79887afaf2fb3d",
            "instance": "i-0a57cc2d3a536dd4c",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0e4f49040672ee596",
            "private_dns": "ip-10-0-1-220.eu-central-1.compute.internal",
            "private_ip": "10.0.1.220",
            "public_dns": "ec2-18-195-122-40.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.195.122.40",
            "public_ipv4_pool": "amazon",
            "region": "eu-central-1",
            "tags": {
              "Environment": "Development",
              "Name": "devops-bastion-eip",
              "Project": "DevOps",
              "Purpose": "Bastion Host Static IP"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "devops-bastion-eip",
              "Project": "DevOps",
              "Purpose": "Bastion Host Static IP"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.bastion_monitoring",
            "aws_security_group.devops_ec2_sg",
            "aws_subnet.public_subnet_1",
            "aws_vpc.project_devops_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07231c6afaecd5265",
            "arn": "arn:aws:ec2:eu-central-1:299138067566:elastic-ip/eipalloc-07231c6afaecd5265",
            "association_id": "eipassoc-02bf9e486a9974d31",
            "domain": "vpc",
            "id": "eipalloc-07231c6afaecd5265",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-066fd9b1f31276731",
            "private_dns": "ip-10-0-1-134.eu-central-1.compute.internal",
            "private_ip": "10.0.1.134",
            "public_dns": "ec2-18-153-195-5.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.153.195.5",
            "public_ipv4_pool": "amazon",
            "region": "eu-central-1",
            "tags": {
              "Name": "project-devops-nat-eip"
            },
            "tags_all": {
              "Name": "project-devops-nat-eip"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.project_devops_igw",
            "aws_vpc.project_devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_monitoring",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0a116fa7c861dd5f9",
            "arn": "arn:aws:ec2:eu-central-1:299138067566:instance/i-0a57cc2d3a536dd4c",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a57cc2d3a536dd4c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "europe_limon",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0e4f49040672ee596"
              }
            ],
            "primary_network_interface_id": "eni-0e4f49040672ee596",
            "private_dns": "ip-10-0-1-220.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.220",
            "public_dns": "ec2-18-195-122-40.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.195.122.40",
            "region": "eu-central-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:eu-central-1:299138067566:key/891e380d-06fd-4c4f-998d-90fe99e07959",
                "tags": {
                  "Environment": "Development",
                  "Name": "devops-bastion-root-volume",
                  "Project": "DevOps"
                },
                "tags_all": {
                  "Environment": "Development",
                  "Name": "devops-bastion-root-volume",
                  "Project": "DevOps"
                },
                "throughput": 125,
                "volume_id": "vol-07f108e656d3ceb68",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-074a6549675c80c2c",
            "tags": {
              "Environment": "Development",
              "Name": "devops-bastion-monitoring",
              "Project": "DevOps",
              "Purpose": "Bastion Host for EKS Monitoring",
              "Type": "Bastion"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "devops-bastion-monitoring",
              "Project": "DevOps",
              "Purpose": "Bastion Host for EKS Monitoring",
              "Type": "Bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04f84f93bb00755d1"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "299138067566",
            "id": "i-0a57cc2d3a536dd4c",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_security_group.devops_ec2_sg",
            "aws_subnet.public_subnet_1",
            "aws_vpc.project_devops_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "project_devops_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:299138067566:internet-gateway/igw-069186249dbcdaf7c",
            "id": "igw-069186249dbcdaf7c",
            "owner_id": "299138067566",
            "region": "eu-central-1",
            "tags": {
              "Name": "project-devops-igw"
            },
            "tags_all": {
              "Name": "project-devops-igw"
            },
            "vpc_id": "vpc-03185688843e29520"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.project_devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "project_devops_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07231c6afaecd5265",
            "association_id": "eipassoc-02bf9e486a9974d31",
            "connectivity_type": "public",
            "id": "nat-0cf786a44231f1bc1",
            "network_interface_id": "eni-066fd9b1f31276731",
            "private_ip": "10.0.1.134",
            "public_ip": "18.153.195.5",
            "region": "eu-central-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-074a6549675c80c2c",
            "tags": {
              "Name": "project-devops-nat-public1-eu-central-1a"
            },
            "tags_all": {
              "Name": "project-devops-nat-public1-eu-central-1a"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.project_devops_igw",
            "aws_subnet.public_subnet_1",
            "aws_vpc.project_devops_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rtb_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:299138067566:route-table/rtb-0eb27c496ef6a9169",
            "id": "rtb-0eb27c496ef6a9169",
            "owner_id": "299138067566",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0cf786a44231f1bc1",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "project-devops-rtb-private1-eu-central-1a"
            },
            "tags_all": {
              "Name": "project-devops-rtb-private1-eu-central-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-03185688843e29520"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "299138067566",
            "id": "rtb-0eb27c496ef6a9169",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.project_devops_igw",
            "aws_nat_gateway.project_devops_nat",
            "aws_subnet.public_subnet_1",
            "aws_vpc.project_devops_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rtb_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:299138067566:route-table/rtb-09bf203d6f377e17f",
            "id": "rtb-09bf203d6f377e17f",
            "owner_id": "299138067566",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0cf786a44231f1bc1",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "project-devops-rtb-private2-eu-central-1b"
            },
            "tags_all": {
              "Name": "project-devops-rtb-private2-eu-central-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-03185688843e29520"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "299138067566",
            "id": "rtb-09bf203d6f377e17f",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.project_devops_igw",
            "aws_nat_gateway.project_devops_nat",
            "aws_subnet.public_subnet_1",
            "aws_vpc.project_devops_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:299138067566:route-table/rtb-08d1a939e3b55f455",
            "id": "rtb-08d1a939e3b55f455",
            "owner_id": "299138067566",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-069186249dbcdaf7c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "project-devops-rtb-public"
            },
            "tags_all": {
              "Name": "project-devops-rtb-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-03185688843e29520"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "299138067566",
            "id": "rtb-08d1a939e3b55f455",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_internet_gateway.project_devops_igw",
            "aws_vpc.project_devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f12bc69c449f624b",
            "region": "eu-central-1",
            "route_table_id": "rtb-0eb27c496ef6a9169",
            "subnet_id": "subnet-05f6d920c97137d97"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.project_devops_igw",
            "aws_nat_gateway.project_devops_nat",
            "aws_route_table.private_rtb_1",
            "aws_subnet.private_subnet_1",
            "aws_subnet.public_subnet_1",
            "aws_vpc.project_devops_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08ed8eced81663347",
            "region": "eu-central-1",
            "route_table_id": "rtb-09bf203d6f377e17f",
            "subnet_id": "subnet-05e101e5fc59ea135"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.project_devops_igw",
            "aws_nat_gateway.project_devops_nat",
            "aws_route_table.private_rtb_2",
            "aws_subnet.private_subnet_2",
            "aws_subnet.public_subnet_1",
            "aws_vpc.project_devops_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01d822dc915a7f358",
            "region": "eu-central-1",
            "route_table_id": "rtb-08d1a939e3b55f455",
            "subnet_id": "subnet-074a6549675c80c2c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.project_devops_igw",
            "aws_route_table.public_rtb",
            "aws_subnet.public_subnet_1",
            "aws_vpc.project_devops_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09acfa8a12e75acd5",
            "region": "eu-central-1",
            "route_table_id": "rtb-08d1a939e3b55f455",
            "subnet_id": "subnet-0726834ef8b632510"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.project_devops_igw",
            "aws_route_table.public_rtb",
            "aws_subnet.public_subnet_2",
            "aws_vpc.project_devops_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "devops_ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:299138067566:security-group/sg-04f84f93bb00755d1",
            "description": "Security group for DevOps EC2 bastion host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04f84f93bb00755d1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "devops_ec2_sg",
            "name_prefix": "",
            "owner_id": "299138067566",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Development",
              "Name": "devops_ec2_sg",
              "Project": "DevOps",
              "Purpose": "Bastion Host"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "devops_ec2_sg",
              "Project": "DevOps",
              "Purpose": "Bastion Host"
            },
            "timeouts": null,
            "vpc_id": "vpc-03185688843e29520"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "299138067566",
            "id": "sg-04f84f93bb00755d1",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.project_devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:299138067566:security-group/sg-0343932639844c8b2",
            "description": "EKS created security group applied to ENI that is attached to EKS Control Plane master nodes, as well as any managed workloads.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow all outbound traffic to self",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "id": "sg-0343932639844c8b2",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow all traffic from self",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "eks-cluster-sg",
            "name_prefix": "",
            "owner_id": "299138067566",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Description": "EKS Cluster Security Group",
              "Environment": "Development",
              "Name": "eks-cluster-sg",
              "Project": "DevOps"
            },
            "tags_all": {
              "Description": "EKS Cluster Security Group",
              "Environment": "Development",
              "Name": "eks-cluster-sg",
              "Project": "DevOps"
            },
            "timeouts": null,
            "vpc_id": "vpc-03185688843e29520"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "299138067566",
            "id": "sg-0343932639844c8b2",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.project_devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_node_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:299138067566:security-group/sg-06608411a2e9d31ce",
            "description": "Security group for EKS worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06608411a2e9d31ce",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Allow all traffic from nodes",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow traffic from EKS cluster",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0343932639844c8b2"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "eks-node-sg",
            "name_prefix": "",
            "owner_id": "299138067566",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Description": "EKS Node Group Security Group",
              "Environment": "Development",
              "Name": "eks-node-sg",
              "Project": "DevOps"
            },
            "tags_all": {
              "Description": "EKS Node Group Security Group",
              "Environment": "Development",
              "Name": "eks-node-sg",
              "Project": "DevOps"
            },
            "timeouts": null,
            "vpc_id": "vpc-03185688843e29520"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "299138067566",
            "id": "sg-06608411a2e9d31ce",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_security_group.eks_cluster_sg",
            "aws_vpc.project_devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "eks_allow_bastion_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow bastion host to access EKS API server",
            "from_port": 443,
            "id": "sgrule-1849099258",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "eu-central-1",
            "security_group_id": "sg-0343932639844c8b2",
            "security_group_rule_id": "sgr-0f01f4dc56d52d11d",
            "self": false,
            "source_security_group_id": "sg-04f84f93bb00755d1",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.devops_ec2_sg",
            "aws_security_group.eks_cluster_sg",
            "aws_vpc.project_devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:299138067566:subnet/subnet-05f6d920c97137d97",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05f6d920c97137d97",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "299138067566",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "project-devops-subnet-private1-eu-central-1a",
              "Type": "Private"
            },
            "tags_all": {
              "Name": "project-devops-subnet-private1-eu-central-1a",
              "Type": "Private"
            },
            "vpc_id": "vpc-03185688843e29520"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "299138067566",
            "id": "subnet-05f6d920c97137d97",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.project_devops_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:299138067566:subnet/subnet-05e101e5fc59ea135",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05e101e5fc59ea135",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "299138067566",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "project-devops-subnet-private2-eu-central-1b",
              "Type": "Private"
            },
            "tags_all": {
              "Name": "project-devops-subnet-private2-eu-central-1b",
              "Type": "Private"
            },
            "vpc_id": "vpc-03185688843e29520"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "299138067566",
            "id": "subnet-05e101e5fc59ea135",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.project_devops_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:299138067566:subnet/subnet-074a6549675c80c2c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-074a6549675c80c2c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "299138067566",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "project-devops-subnet-public1-eu-central-1a",
              "Type": "Public"
            },
            "tags_all": {
              "Name": "project-devops-subnet-public1-eu-central-1a",
              "Type": "Public"
            },
            "vpc_id": "vpc-03185688843e29520"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "299138067566",
            "id": "subnet-074a6549675c80c2c",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.project_devops_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:299138067566:subnet/subnet-0726834ef8b632510",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0726834ef8b632510",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "299138067566",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "project-devops-subnet-public2-eu-central-1b",
              "Type": "Public"
            },
            "tags_all": {
              "Name": "project-devops-subnet-public2-eu-central-1b",
              "Type": "Public"
            },
            "vpc_id": "vpc-03185688843e29520"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "299138067566",
            "id": "subnet-0726834ef8b632510",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.project_devops_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "project_devops_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:299138067566:vpc/vpc-03185688843e29520",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e2b9660e52947777",
            "default_route_table_id": "rtb-0cabcee430bca980a",
            "default_security_group_id": "sg-0bf42bd82174e6299",
            "dhcp_options_id": "dopt-4e6d0f24",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03185688843e29520",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cabcee430bca980a",
            "owner_id": "299138067566",
            "region": "eu-central-1",
            "tags": {
              "Name": "project-devops-vpc"
            },
            "tags_all": {
              "Name": "project-devops-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}